--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:Tenpos2005@localhost:5432/web-market-mhp?schema=public"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
