user register logic implemented

--- a/.env
+++ b/.env
@@ -4,5 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:Tenpos2005@localhost:5432/web-market-mhp?schema=public"
+DATABASE_URL="postgresql://shpak1352:voa1zHDkTX4V@ep-misty-heart-a2st3hms-pooler.eu-central-1.aws.neon.tech/web-market?sslmode=require"
+# uncomment next line if you use Prisma <5.10
+# DATABASE_URL_UNPOOLED="postgresql://shpak1352:voa1zHDkTX4V@ep-misty-heart-a2st3hms.eu-central-1.aws.neon.tech/web-market?sslmode=require"
+
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
