--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ DATABASE_URL="postgresql://shpak1352:voa1zHDkTX4V@ep-misty-heart-a2st3hms-pooler
 # uncomment next line if you use Prisma <5.10
 # DATABASE_URL_UNPOOLED="postgresql://shpak1352:voa1zHDkTX4V@ep-misty-heart-a2st3hms.eu-central-1.aws.neon.tech/web-market?sslmode=require"
 
-NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+AUTH_SECRET=UAzDUC6HyAKTKXibK2uuHkbghDnST4Rc1JyVcK703n0=
